# CodeWarp

./: .gitignore  Cargo.toml  README.md  Run.bat  index.html  package-lock.json  package.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: Architecture.md  CodingConvention.md  HARNESS.md  MODERN_UI_POLICY.md  ModelManager.md  OPENCODE_MIMO_RUNBOOK.md  OPENCODE_ROUTING.md  ProviderIntegration.md  UX-AUDIT.md  UpdatePipeline.md
scripts/: check-layout.mjs  harness.ps1  harness.sh  install-hooks.ps1  install-hooks.sh  run.bat  run.ps1  run.sh  verify-opencode-mimo.ps1  verify-opencode-routing.ps1
src/: App.tsx  block.rs  bootstrap.rs  hf.rs  input.rs  keystore.rs  main.rs  main_tests.rs  mcp.rs  message.rs  model.rs  openrouter.rs  palette.rs  pty.rs  runtime_process.rs  session.rs  state.rs  tabby.rs  test.rs  tools.rs  update.rs  update_chat.rs  update_chat_compare.rs  update_chat_send.rs  update_chat_session.rs  update_chat_stream.rs  update_chat_stream_done.rs  update_chat_stream_helpers.rs  update_chat_tools.rs  update_chat_tools_writes.rs  update_chat_ui.rs  update_dispatch_chat.rs  update_dispatch_hf.rs  update_dispatch_io.rs  update_dispatch_session.rs  update_dispatch_settings.rs  update_dispatch_ui.rs  update_file_tree.rs  update_helpers.rs  update_helpers_tabbyapi.rs  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/block/: block_apply.rs  mod.rs  tests.rs
src/components/: BlockTerminal.tsx  MarkdownView.tsx  RightPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/hf/: encoding.rs  error.rs  fetch.rs  helpers.rs  mod.rs  revision.rs  tests.rs  types.rs
src/keystore/: hf.rs  inference.rs  mod.rs  tabby.rs
src/lib/: api.ts
src/mcp/: mcp_tests.rs  mcp_types.rs  mod.rs
src/model/: display_tests.rs  engine_tests.rs  mod.rs  presets.rs  tabbyapi.rs  tests.rs  types.rs
src/openrouter/: api.rs  api_types.rs  chat_stream.rs  humanize.rs  humanize_tests.rs  mod.rs  parse.rs  parse_sse.rs  parse_values.rs  parse_values_tests.rs  sse_tests.rs  tests.rs  types.rs  types_chunk.rs  types_flexible.rs  types_flexible_tests.rs
src/runtime_process/: mod.rs  tests.rs
src/session/: favorites.rs  mod.rs  persist.rs  persist_tests.rs  recovery.rs  theme.rs  usage.rs
src/state/: mod.rs  state_new.rs  state_restore.rs  state_types.rs
src/styles/: theme.css
src/tabby/: mod.rs  tabby_tests.rs
src/tools/: args.rs  dispatch.rs  exec.rs  mod.rs  tests.rs
src/update_chat_compare/: collect.rs  mod.rs  routes.rs  tests.rs
src/update_chat_send/: mod.rs  send.rs  tests.rs
src/update_chat_stream_done/: mod.rs  tests.rs
src/update_inference/: engine_tests.rs  mod.rs  tabby_launcher_config_tests.rs  tabby_launcher_tests.rs  tabby_models_tests.rs  tabby_tests.rs
src/util/: mod.rs  (+2 more)
(+94 files in other folders)
