[package]
name = "codewarp"
version = "0.2.0"
edition = "2021"
description = "CodeWarp — Warp 스타일 AI 코딩 데스크톱 (Iced 기반)"
authors = ["CodeWarp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Code2731/CodeWarp"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "highlighter", "markdown"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures-util = "0.3"
async-stream = "0.3"
rfd = "0.15"
ignore = "0.4"
globset = "0.4"
regex = "1"
similar = "2"
dirs = "5"
portable-pty = "0.9"
strip-ansi-escapes = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true