[package]
name = "codewarp"
version = "0.2.0"
edition = "2024"
description = "CodeWarp — Warp 스타일 AI 코딩 데스크톱 (Iced 기반)"
authors = ["CodeWarp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Code2731/CodeWarp"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "highlighter", "markdown"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
keyring = { version = "4", features = ["v1"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.150"
futures-util = "0.3"
async-stream = "0.3"
rfd = "0.17"
ignore = "0.4.26"
globset = "0.4"
regex = "1.12.4"
similar = "3"
dirs = "6"
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
